# mcp-registry-diff

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  highstar.yaml  pyproject.toml  setup.py
examples/: registry-new.json  registry-old.json
releases/: v0.1.0.md  v0.1.1.md
src/mcp_registry_diff/: __init__.py  cli.py
tests/: test_cli.py
