[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-registry-diff"
version = "0.1.1"
description = "Compare MCP registry snapshots and report risky differences."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "alexzhu0" }]
keywords = ["ai-tools", "mcp", "agents", "registry", "cli", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development"
]

[project.scripts]
mcp-registry-diff = "mcp_registry_diff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
